responsive: fix the footer columns to have a max width and stack better on tablet view

--- a/code-rad/css/responsive.css
+++ b/code-rad/css/responsive.css
@@ -32,4 +32,6 @@
     width: 80%;
     margin: 0 auto;
   }
+
+  .footer-top .col.three { grid-column: 1 / 3; }
 }
